# BEHAChat

./: .gitignore  CMakeLists.txt  README.md  yapilacaklar.txt
client/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  main.cpp
database/: README.md  export_sql.sh  init_db.sh
database/exports/: table_counts.csv  tables.txt
database/exports/dumps/: data_dump.sql  schema_dump.sql
database/exports/previews/: bans_preview.csv  session_logs_preview.csv  tokens_preview.csv  users_preview.csv
database/exports/schemas/: bans_schema.txt  session_logs_schema.txt  tokens_schema.txt  users_schema.txt
database/migrations/: 001_add_user_timestamps.sql
database/schema/: 00_init.sql  01_users.sql  02_tokens.sql  03_bans.sql  04_session_logs.sql  05_messages.sql
inc/: AdminService.hpp  AuthService.hpp  ChatServer.hpp  ChatService.hpp  ChatSession.hpp  DataBaseManager.hpp  TokenManager.hpp
protos/: auth.proto
src/: AdminService.cpp  AuthService.cpp  ChatServer.cpp  ChatService.cpp  ChatSession.cpp  DataBaseManager.cpp  TokenManager.cpp  main.cpp
